keypress bug fix, added margin on mobile menu

--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -167,5 +167,6 @@
   .menu__items{
     width: 95% !important;
     gap: 1rem;
+    margin-top: 2rem;
   }
 }
